@@ -109,8 +109,6 @@ TODO/Bugs in native WIN32 support (libraries)
  o silc_net_create_connection_async does not work the same way than on
    Unix.  Do it with threads on WIN32.
 
- o SHA1 implementation is broken on WIN32 MSVC++.
-
 
 TODO In SILC Protocol
 =====================
